--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,9 @@
 
     <groupId>groupId</groupId>
     <artifactId>JMARK</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-swing</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>JMARK-core</module>
+    </modules>
 </project>
